--- a/src/components/EventsList/styles.scss
+++ b/src/components/EventsList/styles.scss
@@ -1,6 +1,6 @@
 .MuiList-root.list {
   overflow: auto;
-  max-height: 300px;
+  height: 300px;
   background-color: #f5f5f5;
   border-radius: 6px;
 }
@@ -32,4 +32,19 @@
 
 .MuiOutlinedInput-root.select {
   min-width: 130px;
+}
+
+.MuiPaper-root.card-actions-parent {
+  position: relative;
+
+  .card-actions {
+    position: absolute;
+    right: 16px;
+    top: 5px;
+    cursor: pointer;
+  }
+}
+
+.MuiPaper-root.active {
+  background-color: #eeebff;
 }
