--- a/src/components/EventsList/EventsList.module.scss
+++ b/src/components/EventsList/EventsList.module.scss
@@ -11,6 +11,10 @@
   border-radius: 6px;
 }
 
+.resultsBox {
+  padding: $default-padding * 2;
+}
+
 .cardPaper {
   box-sizing: border-box;
   width: 100%;
