--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,6 +2,7 @@ $primary-color: #735bf2;
 $light-gray: #f8f8f8;
 $white-color: #ffffff;
 $active-card-color: #e3e0ff;
+$grey-500: #9e9e9e;
 
 $default-margin: 8px;
 $default-padding: 8px;
