--- a/src/components/EventsList/EventsList.module.scss
+++ b/src/components/EventsList/EventsList.module.scss
@@ -21,6 +21,7 @@
   padding: 1em;
   border: 4px solid $white-color;
   transition: border-color 0.5s ease;
+  cursor: pointer;
 
   &.active {
     border: 4px solid $active-card-color;
