--- a/src/components/EventsList/DeleteModal/DeleteModal.module.scss
+++ b/src/components/EventsList/DeleteModal/DeleteModal.module.scss
@@ -2,11 +2,11 @@
 
 button.closeBtn {
   position: absolute;
-  right: 8px;
-  top: 12px;
+  right: 0;
+  top: 0;
   color: $grey-500;
 }
 
-div.buttonsWrapper {
-  padding: 16px 24px;
+h2.modalTitle {
+  padding-top: $default-padding * 5;
 }
