--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,3 +1,15 @@
 .flexWrapper {
   display: flex;
 }
+
+div.custom {
+  max-width: calc(100% - 200px);
+
+  @media only screen and (max-width: 600px) {
+    max-width: 100%;
+  }
+
+  @media only screen and (min-width: 1200px) {
+    max-width: calc(100% - 200px);
+  }
+}
